--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "node project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "y00ngi",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "jest": "^25.5.4",
+    "portfinder": "^1.0.28",
+    "puppeteer": "^1.20.0"
   }
 }
